kubernetes/manifests/pgsql/templates/ciliumnetpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: block-untrusted-traffic
  namespace: pgsql
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
        - matchLabels:
            io.kubernetes.pod.namespace: immich
        - matchLabels:
            io.kubernetes.pod.namespace: pgadmin
        - matchLabels:
            io.kubernetes.pod.namespace: bsk-api
        - matchLabels:
            io.kubernetes.pod.namespace: recipes
        - matchLabels:
            io.kubernetes.pod.namespace: wallabag
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
        - matchLabels:
            io.kubernetes.pod.namespace: freshrss
        - matchLabels:
            io.kubernetes.pod.namespace: nextcloud

  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
